Fix username overflow

--- a/addons/search-profile/style.css
+++ b/addons/search-profile/style.css
@@ -4,6 +4,12 @@
   border-radius: 3px;
 }
 
+.tabs button.sa-search-profile-btn {
+  /* Vanilla style is width:8.75em */
+  width: auto;
+  min-width: 8.75em;
+}
+
 .sa-search-profile-btn span {
   display: flex;
   justify-content: center;
